--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "data:import": "node server/seeder",
+    "data:destroy": "node server/seeder -d"
   },
   "dependencies": {
     "express": "^4.18.2",
