--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 
-MONGODB_URL=mongodb://localhost:27017
-MONGODB_DB_NAME=bicycle_shop
+MONGODB_URI=mongodb+srv://lion:12345897@cluster0.p5ask67.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+NODE_ENV=development
 
 
 PORT=5000
