--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
-MONGODB_URI=mongodb+srv://lion:12345897@cluster0.p5ask67.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+    =mongodb+srv://lion:123456789981@cluster0.p5ask67.mongodb.net/velopro?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 
 PORT=5000
